--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "ocomp",
-  "version": "1.0.43",
+  "version": "2.0.0",
   "main": "./dist/index.js",
   "author": "luliangxiao",
   "license": "MIT",
@@ -10,15 +10,15 @@
   ],
   "scripts": {
     "flow": "flow",
-    "build": "rollup -c ./build/rollup.config.js"
+    "build": "webpack --config build/webpack.base.conf.js --progress"
   },
   "devDependencies": {
+    "babel-plugin-proxy": "^1.1.0",
     "babel-plugin-transform-flow-strip-types": "^6.22.0",
     "flow-bin": "^0.43.1",
     "flow-remove-types": "^1.2.0",
     "rollup": "^0.41.6",
-    "rollup-plugin-buble": "^0.15.0",
-    "webpack": "^2.3.3"
+    "rollup-plugin-buble": "^0.15.0"
   },
   "dependencies": {
     "babel": "^6.23.0",
@@ -28,6 +28,7 @@
     "babel-plugin-add-module-exports": "^0.2.1",
     "babel-plugin-syntax-flow": "^6.18.0",
     "babel-plugin-transform-runtime": "^6.23.0",
+    "babel-polyfill": "^6.23.0",
     "babel-preset-es2015": "^6.24.1",
     "babel-preset-flow": "^6.23.0",
     "babel-preset-stage-0": "^6.24.1"
